change some style

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="text-center notify mt-5" id="waring">
-            <p class="fw-bold fs-2 text-warning">City Not Found</p>
+            <p class="fw-semibold  fs-2 text-white">City Not Found</p>
         </div>
     </main>
 
