--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1 id="name">Dhaka</h1>
                 <h2><span id="celcious">38.06</span>&deg;C</h2>
                 <h6 id="description">Clouds</h6>
-                <p id="more-des">haze</p>
+                <p id="more-des">Humidity: 78%</p>
             </div>
         </div>
 
