--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="input-group w-50 mx-auto mt-5">
+    <header class="col-12 col-md-6 mx-auto container">
+        <div class="input-group mt-5">
             <input id="inputField" type="text" class="form-control" placeholder="Enter Location for weather">
             <button class="input-group-text btn-lg btn-danger" onclick="tempareture()">Search</button>
         </div>
