--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <main>
         <div class="text-center mt-5 text-white" id="weather">
             <div>
+                <img src="https://openweathermap.org/img/w/50d.png" width="100px" alt="">
                 <h1 id="name">Dhaka</h1>
                 <h2><span id="celcious">38.06</span>&deg;C</h2>
                 <h6 id="description">Clouds</h6>
