--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
     </header>
     <main>
-        <div class="text-center mt-5 text-white" id="weather">
+        <div class="text-center mt-3 text-white" id="weather">
             <div>
-                <img src="https://openweathermap.org/img/w/50d.png" width="100px" alt="">
-                <h1 id="name">Dhaka</h1>
-                <h2><span id="celcious">38.06</span>&deg;C</h2>
-                <h6 id="description">Clouds</h6>
-                <p id="more-des">Humidity: 78%</p>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" id="img-icon" width="120px" alt="">
+                <h1 id="city">Dhaka</h1>
+                <h2><span id="tempareture">38.06</span>&deg;C</h2>
+                <h6 id="condition">Clouds</h6>
+                <p>Humidity: <span id="humidity">78</span>%</p>
             </div>
         </div>
 
